Fixes Incorrect spacing on partial rendering for flatmates manage page

--- a/src/pages/ManageProperties/components/ManagePropertiesFlatmateListComponent/ManagePropertiesFlatmateListComponent.module.scss
+++ b/src/pages/ManageProperties/components/ManagePropertiesFlatmateListComponent/ManagePropertiesFlatmateListComponent.module.scss
@@ -75,9 +75,11 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
+    text-align: center;
 
     h2 {
       margin-bottom: 20px;
+      line-height: 100%;
     }
   }
 }
